syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "emoji.proto";

option csharp_namespace = "Mastodon.Grpc";



// Represents a poll attached to a status.
message Poll
{
    // The ID of the poll in the database.
    string id = 1;

    // When the poll ends.
    optional google.protobuf.Timestamp expiresAt = 2 [json_name="expires_at"];

    // Is the poll currently expired?
    bool expired = 3;

    // Does the poll allow multiple-choice answers?
    bool multiple = 4;

    // How many votes have been received.
    uint32 votesCount = 5 [json_name="votes_count"];

    // How many unique accounts have voted on a multiple-choice poll.
    optional uint32 votersCount = 6 [json_name="voters_count"];

    // Possible answers for the poll.
    repeated Option options = 7;

    // Custom emoji to be used for rendering poll options.
    repeated CustomEmoji emojis = 8;

    // When called with a user token, has the authorized user voted?
    optional bool voted = 9;

    // When called with a user token, which options has the authorized user chosen? Contains an array of index values for options.
    repeated uint32 ownVotes = 10 [json_name="own_votes"];

    message Option
    {
        // The text value of the poll option.
        string title = 1;

        // The total number of received votes for this option.
        optional uint32 votesCount = 2 [json_name="votes_count"];
    }
}